# t3api-python

./: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: AuthenticationApi.md  CreatePackageApi.md  CreateStrainsApi.md  CreateTransferApi.md  EndpointId.md  ExtractedLabResult.md  FacilitiesApi.md  FilesApi.md  FreeApi.md  HarvestsApi.md  HistoryApi.md  IncomingTransferManifestReportResponse.md  ItemsApi.md  JWTData.md  LabResultsApi.md  LabTestingStates.md  LabelsApi.md  LicensesApi.md  ManifestsApi.md  MetrcCreatePackageInputsResponse.md  MetrcCreateTransferInputsResponse.md  MetrcCredentialAuthPayload.md  MetrcDeliveryPackage.md  MetrcDeliveryPackageListResponse.md  MetrcDiscontinueItemPayload.md  MetrcDiscontinueStrainPayload.md  MetrcDriver.md  MetrcFacility.md  MetrcFacilityListResponse.md  MetrcFacilityPhysicalAddress.md  MetrcHarvest.md  MetrcHarvestListResponse.md  MetrcHarvestPackage.md  MetrcHarvestPackageListResponse.md  MetrcHarvestPlant.md  MetrcHarvestPlantListResponse.md  MetrcHarvestReportResponse.md  MetrcHistory.md  MetrcHistoryListResponse.md  MetrcIncomingTransfer.md  (+180 more)
scripts/: generate.sh
t3api/: __init__.py  api_client.py  configuration.py
test/: test_create_strains_api.py  test_create_transfer_api.py  test_extracted_lab_result.py  test_files_api.py  test_free_api.py  test_harvests_api.py  test_items_api.py  test_jwt_data.py  test_labels_api.py  test_metrc_create_package_inputs_response.py  test_metrc_create_transfer_inputs_response.py  test_metrc_delivery_package.py  test_metrc_item.py  (+89 more)
(+49 files in other folders)
